fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+body{
+  overflow-x: hidden;
+}
 :root{
   --color-bg:white;
   --color-bg-variant:#050727;
