--- a/src/pages/Presentation/clients/P1.css
+++ b/src/pages/Presentation/clients/P1.css
@@ -8,7 +8,7 @@ body{
     margin-top: 5%;
     display: flex;
     justify-content: center;
-    width: 50vw;
+    width: 49vw;
     position: relative;
     animation: slideDown1 1s;
     
